--- a/index.html
+++ b/index.html
@@ -13,22 +13,19 @@
 <!-- WEB PAGE CONTENT HERE -->
 
 <div class="pageContainer">
-  <div class="imageContainer"> 
-    <img src="images/cookies.jpg" alt="Tray of Chocolate Chip Cookies." /> 
+  <div class="imageContainer">
+    <img src="images/cookies.jpg" alt="Tray of Chocolate Chip Cookies." />
   </div>
   <div class="textContainer">
     <h1>Cookies!</h1>
     <p>My Favorite Cookies: </p>
     <ul>
       <li>Chocolate Chip</li>
-      <li>Peanut Butter</li>
-      <li>Christmas</li>
+      <li>Peanut Butter Chocolate Chip</li>
+      <li>Chocolate Chocolate Chip</li>
     </ul>
   </div>
 </div>
 
 </body>
 </html>
-
-
-
